# ubuntu-insights-k8s-operator

./: .gitignore  .trivyignore  CONTRIBUTING.md  README.md  SECURITY.md  charmcraft.yaml  pyproject.toml  renovate.json  tox.ini
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: charm-update-libs.yaml  integration-test.yaml  promote-charm.yaml  publish-charm.yaml  test.yaml  tics-scan.yaml
insights_rock/: rockcraft.yaml
src/: charm.py  database.py
src/grafana_dashboards/: Ubuntu-Insights-Monitoring.json.tmpl
tests/: conftest.py
tests/integration/: conftest.py  helpers.py  test_charm.py  test_removal.py
tests/unit/: test_charm.py  test_database.py
