[project]
name = "ubuntu-insights-k8s-operator"
dynamic = ["version"]
requires-python = ">=3.10"

# Required group: these are all dependencies required to run the charm.
dependencies = ["ops==3.4.0", "requests==2.32.5", "cosl==1.4.0"]

# Required group: these are all dependencies required to run all the charm's tests.
[dependency-groups]
test = ["ops[testing]", "jubilant==1.6.2", "pytest", "coverage[toml]"]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.extend-ignore = [
    "D105",
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
lint.per-file-ignores = { "tests/*" = ["D100", "D101", "D102", "D103", "D104"] }
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src/"]
extraPaths = ["lib", "./src"]
ignore = [
    "lib/charms/data_platform_libs/",
    "lib/charms/rolling_ops/",
    "lib/charms/grafana_k8s/",
    "lib/charms/loki_k8s/",
    "lib/charms/prometheus_k8s/",
    "lib/charms/nginx_ingress_integrator/",
]
